# OptiWash

./: Backtracking.cpp  Backtracking.h  CMakeLists.txt  Greedy.cpp  Greedy.h  Item.cpp  Item.h  LaundryProgramDataBase.cpp  LaundryProgramDataBase.h  main.cpp  tests.cpp
